// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`badge > renders with as correctly 1`] = `
"<div data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted">
  <!--v-if--><span data-slot="label" class="truncate">Badge</span>
  <!--v-if-->
</div>"
`;

exports[`badge > renders with avatar and leadingIcon correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted p-1"><span class="iconify i-lucide:arrow-left shrink-0 size-4" aria-hidden="true" data-slot="leadingIcon"></span>
<!--v-if-->
<!--v-if--></span>"
`;

exports[`badge > renders with avatar and trailingIcon correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted p-1"><span data-slot="leadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-4 text-[8px] shrink-0"><img src="https://github.com/praburangki.png" width="16" height="16" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span>
<!--v-if--><span class="iconify i-lucide:arrow-right shrink-0 size-4" aria-hidden="true" data-slot="trailingIcon"></span></span>"
`;

exports[`badge > renders with avatar correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted p-1"><span data-slot="leadingAvatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-4 text-[8px] shrink-0"><img src="https://github.com/praburangki.png" width="16" height="16" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span>
<!--v-if-->
<!--v-if--></span>"
`;

exports[`badge > renders with class correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted rounded-full font-bold"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with default slot correctly 1`] = `"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted"><!--v-if-->Default slot<!--v-if--></span>"`;

exports[`badge > renders with icon correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted p-1"><span class="iconify i-lucide:rocket shrink-0 size-4" aria-hidden="true" data-slot="leadingIcon"></span>
<!--v-if-->
<!--v-if--></span>"
`;

exports[`badge > renders with label correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with leading and icon correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted p-1"><span class="iconify i-lucide:arrow-left shrink-0 size-4" aria-hidden="true" data-slot="leadingIcon"></span>
<!--v-if-->
<!--v-if--></span>"
`;

exports[`badge > renders with leading slot correctly 1`] = `"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted p-1">Leading slot<!--v-if--><!--v-if--></span>"`;

exports[`badge > renders with leadingIcon correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted p-1"><span class="iconify i-lucide:arrow-left shrink-0 size-4" aria-hidden="true" data-slot="leadingIcon"></span>
<!--v-if-->
<!--v-if--></span>"
`;

exports[`badge > renders with neutral variant outline correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md ring ring-inset ring-ring-accented color-text bg-background"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with neutral variant soft correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md color-text bg-background-elevated"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with neutral variant solid correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md color-text-inverted bg-background-inverted"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with neutral variant subtle correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md ring ring-inset ring-ring-accented color-text bg-background-elevated"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with primary variant outline correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md text-primary ring ring-inset ring-primary/50"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with primary variant soft correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with primary variant solid correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with primary variant subtle correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with size lg correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-sm px-2 py-1 gap-1.5 rounded-md bg-primary color-text-inverted"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with size md correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with size sm correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-[10px]/3 px-1.5 py-1 gap-1 rounded-sm bg-primary color-text-inverted"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with size xl correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-base px-2.5 py-1 gap-1.5 rounded-md bg-primary color-text-inverted"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with size xs correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-[8px]/3 px-1 py-0.5 gap-1 rounded-sm bg-primary color-text-inverted"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with square correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted p-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`badge > renders with trailing and icon correctly 1`] = `"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted p-1"><!--v-if--><!--v-if--><span class="iconify i-lucide:arrow-right shrink-0 size-4" aria-hidden="true" data-slot="trailingIcon"></span></span>"`;

exports[`badge > renders with trailing slot correctly 1`] = `"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted p-1"><!--v-if--><!--v-if-->Trailing slot</span>"`;

exports[`badge > renders with trailingIcon correctly 1`] = `"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted p-1"><!--v-if--><!--v-if--><span class="iconify i-lucide:arrow-right shrink-0 size-4" aria-hidden="true" data-slot="trailingIcon"></span></span>"`;

exports[`badge > renders with ui correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary color-text-inverted"><!--v-if--><span data-slot="label" class="truncate font-bold">Badge</span>
<!--v-if--></span>"
`;
